[레거시 코드 리팩터링 - 2단계] 페퍼(최수연) 미션 제출합니다. (#311)
* docs(README): 2단계 요구사항 추가

* refactor: TableGroup, Product, MenuGroup, Menu 무분별한 setter 사용 제거

* refactor(MenuService): Menu와 MenuProduct 도메인에게 로직 위임

- MenuRequest DTO 생성

* refactor(/ui): 반복되는 uri와 불필요한 개행 제거

* docs(README): 구현 기능 목록 업데이트

* refactor(ProductService): Product 도메인에 가격 검증 로직 위임

- ProductRequest DTO 생성

* refactor(TableService): OrderTable 도메인에 가격 검증 로직 위임

- OrderTableRequest DTO 생성

* refactor(TableGroupService): 도메인에 가격 검증 로직 위임

* refactor(OrderService): 도메인에 로직 위임

* refactor: 불필요한 생성자 제거

* chore: properties -> yml 로 변경

* refactor: Order 도메인의 OrderStatus 필드 타입 String -> OrderStatus 변경

* refactor: Order 도메인의 OrderStatus 필드 타입 String -> OrderStatus 변경

* refactor(Menu): MenuProduct 저장하는 로직을 dao 내부로 캡슐화