@@ -1,10 +1,10 @@
 package kitchenpos.application;
 
+import static kitchenpos.fixture.OrderFixture.updatedOrderStatusRequest;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -14,6 +14,8 @@ import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.Product;
+import kitchenpos.dto.OrderRequest;
+import kitchenpos.dto.OrderStatusRequest;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -58,11 +60,10 @@ class OrderServiceTest extends ServiceTest {
             Menu menu2 = saveMenu("크림어니언치킨", menuGroup, product);
             OrderTable orderTable = saveOrderTable(2, false);
             Order savedOrder = saveOrder(orderTable, menu1, menu2);
-            Order updateOrder = new Order();
-            updateOrder.setOrderStatus("MEAL");
+            OrderStatusRequest request = updatedOrderStatusRequest("MEAL");
 
             // when
-            Order actual = orderService.changeOrderStatus(savedOrder.getId(), updateOrder);
+            Order actual = orderService.changeOrderStatus(savedOrder.getId(), request);
 
             // then
             assertThat(actual.getOrderStatus()).isEqualTo("MEAL");
@@ -77,10 +78,10 @@ class OrderServiceTest extends ServiceTest {
             Menu menu1 = saveMenu("크림치킨", menuGroup, product);
             Menu menu2 = saveMenu("크림어니언치킨", menuGroup, product);
             OrderTable orderTable = saveOrderTable(2, false);
-            Order order = saveOrder(orderTable, menu1, menu2);
+            OrderStatusRequest request = updatedOrderStatusRequest("MEAL");
 
             // when & then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(2L, order))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(2L, request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -94,12 +95,11 @@ class OrderServiceTest extends ServiceTest {
             Menu menu2 = saveMenu("크림어니언치킨", menuGroup, product);
             OrderTable orderTable = saveOrderTable(2, false);
             Order savedOrder = saveOrder(orderTable, menu1, menu2);
-            Order updateOrder = new Order();
-            updateOrder.setOrderStatus("COMPLETION");
-            orderService.changeOrderStatus(savedOrder.getId(), updateOrder);
+            OrderStatusRequest request = updatedOrderStatusRequest("COMPLETION");
+            orderService.changeOrderStatus(savedOrder.getId(), request);
 
             // when & then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrder.getId(), updateOrder))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrder.getId(), request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
     }
@@ -124,12 +124,10 @@ class OrderServiceTest extends ServiceTest {
             OrderLineItem orderLineItem2 = new OrderLineItem();
             orderLineItem2.setMenuId(menu2.getId());
             orderLineItem2.setQuantity(2);
-            Order order = new Order();
-            order.setOrderLineItems(List.of(orderLineItem1, orderLineItem2));
-            order.setOrderTableId(orderTable.getId());
+            OrderRequest request = new OrderRequest(orderTable.getId(), List.of(orderLineItem1, orderLineItem2));
 
             // when
-            Order savedOrder = orderService.create(order);
+            Order savedOrder = orderService.create(request);
 
             // then
             Optional<Order> actual = orderDao.findById(savedOrder.getId());
@@ -140,11 +138,11 @@ class OrderServiceTest extends ServiceTest {
         @DisplayName("OrderLineItem 리스트가 빈 리스트인 경우 예외를 던진다.")
         void orderLineItems_IsEmpty_ExceptionThrown() {
             // given
-            Order order = new Order();
-            order.setOrderLineItems(Collections.emptyList());
+            OrderTable orderTable = saveOrderTable(2, false);
+            OrderRequest request = new OrderRequest(orderTable.getId(), Collections.emptyList());
 
             // when & then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -153,7 +151,7 @@ class OrderServiceTest extends ServiceTest {
         void orderLineItem_MenuNotExist_ExceptionThrown() {
             // given
             MenuGroup menuGroup = menuGroupService.create(saveMenuGroup("반마리치킨"));
-            Product product = productService.create(saveProduct("크림치킨", BigDecimal.valueOf(15000.00)));
+            Product product = saveProduct("크림치킨", BigDecimal.valueOf(15000.00));
             Menu menu = saveMenu("크림치킨", menuGroup, product);
             OrderLineItem orderLineItem1 = new OrderLineItem();
             orderLineItem1.setMenuId(menu.getId());
@@ -161,12 +159,11 @@ class OrderServiceTest extends ServiceTest {
             OrderLineItem orderLineItem2 = new OrderLineItem();
             orderLineItem2.setMenuId(menu.getId());
             orderLineItem2.setQuantity(2);
-
-            Order order = new Order();
-            order.setOrderLineItems(Arrays.asList(orderLineItem1, orderLineItem2));
+            OrderTable orderTable = saveOrderTable(2, false);
+            OrderRequest request = new OrderRequest(orderTable.getId(), List.of(orderLineItem1, orderLineItem2));
 
             // when & then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -175,7 +172,7 @@ class OrderServiceTest extends ServiceTest {
         void orderTable_NotExist_ExceptionThrown() {
             // given
             MenuGroup menuGroup = menuGroupService.create(saveMenuGroup("반마리치킨"));
-            Product product = productService.create(saveProduct("크림치킨", BigDecimal.valueOf(15000.00)));
+            Product product = saveProduct("크림치킨", BigDecimal.valueOf(15000.00));
             Menu menu1 = saveMenu("크림치킨", menuGroup, product);
             Menu menu2 = saveMenu("크림어니언치킨", menuGroup, product);
             OrderLineItem orderLineItem1 = new OrderLineItem();
@@ -184,13 +181,10 @@ class OrderServiceTest extends ServiceTest {
             OrderLineItem orderLineItem2 = new OrderLineItem();
             orderLineItem2.setMenuId(menu2.getId());
             orderLineItem2.setQuantity(2);
-
-            Order order = new Order();
-            order.setOrderLineItems(Arrays.asList(orderLineItem1, orderLineItem2));
-            order.setOrderTableId(1L);
+            OrderRequest request = new OrderRequest(1L, List.of(orderLineItem1, orderLineItem2));
 
             // when & then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
 
@@ -199,7 +193,7 @@ class OrderServiceTest extends ServiceTest {
         void orderTable_IsEmpty_ExceptionThrown() {
             // given
             MenuGroup menuGroup = menuGroupService.create(saveMenuGroup("반마리치킨"));
-            Product product = productService.create(saveProduct("크림치킨", BigDecimal.valueOf(15000.00)));
+            Product product = saveProduct("크림치킨", BigDecimal.valueOf(15000.00));
             Menu menu1 = saveMenu("크림치킨", menuGroup, product);
             Menu menu2 = saveMenu("크림어니언치킨", menuGroup, product);
             OrderLineItem orderLineItem1 = new OrderLineItem();
@@ -208,14 +202,11 @@ class OrderServiceTest extends ServiceTest {
             OrderLineItem orderLineItem2 = new OrderLineItem();
             orderLineItem2.setMenuId(menu2.getId());
             orderLineItem2.setQuantity(2);
-            OrderTable orderTable = tableService.create(saveOrderTable(2, true));
-
-            Order order = new Order();
-            order.setOrderLineItems(Arrays.asList(orderLineItem1, orderLineItem2));
-            order.setOrderTableId(orderTable.getId());
+            OrderTable orderTable = saveOrderTable(2, true);
+            OrderRequest request = new OrderRequest(orderTable.getId(), List.of(orderLineItem1, orderLineItem2));
 
             // when & then
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
         }
     }
